--- a/style.css
+++ b/style.css
@@ -128,12 +128,20 @@ h2 {
 }
 
 .attribution {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  margin: 2rem 0;
-  color: var(--grayish-blue);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 2rem 0;
+    font-size: 11px; 
+    text-align: center; 
 }
+    
+.attribution a { 
+    color: hsl(228, 45%, 44%);
+}
+
+
+
 
 @media all and (min-width: 750px) {
   .top {
