--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
 .container {
   display: flex;
   justify-content: center;
+  min-height: 100vh;
+  align-items: center;
 }
 
 .card {
@@ -52,7 +54,7 @@ h3 {
 }
 .up-card p {
   color: var(--grayish-blue);
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   line-height: 2.5rem;
 }
 .month{
